@@ -225,7 +225,7 @@ bool FilesystemNode::rename(const string& newfile)
 }
 
 // - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
-size_t FilesystemNode::read(ByteBuffer& image) const
+size_t FilesystemNode::read(ByteBuffer& buffer) const
 {
   size_t size = 0;
 
@@ -234,11 +234,11 @@ size_t FilesystemNode::read(ByteBuffer& image) const
     throw runtime_error("File not found/readable");
 
   // First let the private subclass attempt to open the file
-  if (_realNode && (size = _realNode->read(image)) > 0)
+  if (_realNode && (size = _realNode->read(buffer)) > 0)
     return size;
 
   // Otherwise, the default behaviour is to read from a normal C++ ifstream
-  image = make_unique<uInt8[]>(Cartridge::maxSize());
+  buffer = make_unique<uInt8[]>(Cartridge::maxSize());
   ifstream in(getPath(), std::ios::binary);
   if (in)
   {
@@ -250,7 +250,41 @@ size_t FilesystemNode::read(ByteBuffer& image) const
       throw runtime_error("Zero-byte file");
 
     size = std::min<size_t>(length, Cartridge::maxSize());
-    in.read(reinterpret_cast<char*>(image.get()), size);
+    in.read(reinterpret_cast<char*>(buffer.get()), size);
+  }
+  else
+    throw runtime_error("File open/read error");
+
+  return size;
+}
+
+// - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+size_t FilesystemNode::read(stringstream& buffer) const
+{
+  size_t size = 0;
+
+  // File must actually exist
+  if (!(exists() && isReadable()))
+    throw runtime_error("File not found/readable");
+
+  // First let the private subclass attempt to open the file
+  if (_realNode && (size = _realNode->read(buffer)) > 0)
+    return size;
+
+  // Otherwise, the default behaviour is to read from a normal C++ ifstream
+  // and convert to a stringstream
+  ifstream in(getPath(), std::ios::binary);
+  if (in)
+  {
+    in.seekg(0, std::ios::end);
+    std::streampos length = in.tellg();
+    in.seekg(0, std::ios::beg);
+
+    if (length == 0)
+      throw runtime_error("Zero-byte file");
+
+    size = std::min<size_t>(length, Cartridge::maxSize());
+    buffer << in.rdbuf();
   }
   else
     throw runtime_error("File open/read error");
